fixed bug with file does not exist